added first div

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   </head>
 
   <body>
+  <div header>
+  	testing 1 - 2 - 3
+  </div>
+
   This is a test of the american broadcast system.  this is only a test.
   </body>
+
 
 </html>
 
