--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   </head>
 
   <body>
-  <div header>
-  	testing 1 - 2 - 3
-  </div>
-
-  This is a test of the american broadcast system.  this is only a test.
+	<div id="header">
+		<h1>testing 1 - 2 - 3</h1>
+	</div>
+	<div id="invisible-header">
+		<h1>testing 1 - 2 - 3</h1>
+	</div>
+	<p>This is a test of the american broadcast system.  this is only a test.</p>
   </body>
 
 
